--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Line Drawing Algorithm</title>
-		<script type="module" defer src="./line.js"></script>
+		<script type="module" defer src="./index.js"></script>
 	</head>
 	<body>
 		<form>
